# Edge-Detection-Viewer

./: README.md  build.gradle  settings.gradle
app/: README.md  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/app/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gl/: README.md  build.gradle
gl/src/main/java/com/example/gl/: MyGLRenderer.java  MyGLSurfaceView.java
jni/: README.md  build.gradle
jni/src/main/: AndroidManifest.xml
jni/src/main/cpp/: CMakeLists.txt  native-lib.cpp
jni/src/main/java/com/example/jni/: NativeBridge.kt
web/: README.md  index.html  package.json  tsconfig.json
web/src/: main.ts
